--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@webpack-cli/serve": "^2.0.0",
     "webpack-dev-server": "^4.7.3"
   }
 }
